[package]
name = "mediator-tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
mediator = { path = "../mediator" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = "1.0.162"
tracing-opentelemetry = { version = "0.18.0", optional = true }
opentelemetry-otlp = { version = "0.11.0", optional = true }
opentelemetry = { version = "0.18.0", optional = true }
derive_more = { workspace = true }
strum = { version = "0.25.0", features = ["derive"] }

[features]
default = []
export-tracing = []
otel = [
  "dep:tracing-opentelemetry",
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
]
